<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AirTicket</string>
    <string name="action_settings">Settings</string>

    <!-- 常用 -->
    <string name="button_back">返回</string>
    <string name="button_search">开始搜索</string>
    <string name="sure">确定</string>
    <string name="cancel">取消</string>
    
       <string name="string_back">返回</string>
    <string name="string_search_hit">搜索中文/城市简拼</string>
    <string name="string_hot_city">热门城市</string>

    <!-- 标题 -->
    <string name="title_airTicket">机票</string>
    <string name="title_startDate">选择出发日期</string>
    <string name="title_oneWay">单程</string>
    <string name="title_endorseOrBackDesc">退改签说明</string>
    <string name="title_goAndBack">往返</string>
    <string name="title_select_space">选择舱位</string>
    <string name="title_select_certificate">选择证件</string>
    <string name="title_select_ticket_distribute">选择配送方式</string>
    <string name="title_date_leave">选择出发日期</string>
    <string name="title_date_back">选择返回日期</string>
    <string name="title_order_edit">订单填写</string>
    <string name="title_ticket_result">%1$s - %2$s (%3$s) </string>
    
    <!-- 舱位类型 -->
    <string-array name="TypeSapce">
        <item>经济舱</item>
        <item>商务舱</item>
        <item>头等舱</item>
    </string-array>

    <!-- 证件类型 -->
    <string-array name="TypeCert">
        <item>身份证</item>
        <item>护照</item>
        <item>台胞证</item>
        <item>回乡证</item>
        <item>军人证</item>
        <item>港澳通行证</item>
        <item>其他</item>
    </string-array>

    <!-- 机票配送方式 -->
    <string-array name="TypeTicketDestribute">
        <item>不需要报销凭证</item>
        <item>快递</item>
    </string-array>
    
    <!-- 空险类型 -->
    <string-array name="TypeInsure">
        <item>@string/order_insure_casualty</item>
        <item>@string/order_insure_delay</item>
        <item>@string/order_insure_combination</item>
    </string-array>
    
    <!-- 机票订单 -->
    <string name="order_peopleAndPrice">共%1$s人，总计￥%2$s</string>
    <string name="order_name">姓名</string>
    <string name="order_passengers">乘机人姓名</string>
    <string name="order_cert">身份证</string>
    <string name="order_cert_num">证件号码</string>
    <string name="order_commit">提交订单</string>
    <string name="order_add_passengers">添加更多乘机人</string>
    <string name="order_insure_casualty">航空意外险</string>
    <string name="order_insure_delay">延误取消险</string>
    <string name="order_insure_combination">航空组合险</string>
    
    
    <!-- 城市列表 -->
    <string name="hint_citylist_search">搜索中文/全拼</string>

    <!-- 退改签说明 -->
    <string name="title_endorse_refund">退票条件</string>
    <string name="endorse_refund_desc" formatted="false">起飞前2小时之前的产品退订手续费按产品价收取50%，起飞前2小时（含）以内和起飞后不支持产品退订；</string>
    <string name="title_endorse_change">更改条件</string>
    <string name="endorse_change_desc" formatted="false">起飞前2小时之前的改期手续费按产品价收取30%，起飞前2小时（含）以内及起飞后的收取50%；改期费与升舱费同时发生，需同时收取。</string>
    <string name="title_endorse">签转条件</string>
    <string name="endorse_desc">不得签转</string>
    
    <!-- 提示 -->
    <string name="tips_exitOrder">您正在填写订单，是否要退出？</string>
    <string-array name="CityTags">
        <item>热门</item>
        <item>A</item>
        <item>B</item>
        <item>C</item>
        <item>D</item>
        <item>E</item>
        <item>F</item>
        <item>G</item>
        <item>H</item>
        <item>I</item>
        <item>J</item>
        <item>K</item>
        <item>L</item>
        <item>M</item>
        <item>N</item>
        <item>O</item>
        <item>P</item>
        <item>Q</item>
        <item>R</item>
        <item>S</item>
        <item>T</item>
        <item>U</item>
        <item>V</item>
        <item>W</item>
        <item>X</item>
        <item>Y</item>
        <item>Z</item>
    </string-array>
    
        <!-- 热门城市 -->

    <string-array name="hot_city">
        <item>北京</item>
        <item>广州</item>
        <item>上海</item>
    </string-array>
    
    <string-array name="CityNames">
        <item>北京首都</item>
        <item>上海虹桥</item>
        <item>上海浦东</item>
        <item>广州</item>
        <item>深圳</item>
        <item>香港</item>
        <item>澳门</item>
        <item>天津</item>
        <item>成都</item>
        <item>重庆</item>
        <item>南京</item>
        <item>青岛</item>
        <item>珠海</item>
        <item>福州</item>
        <item>哈尔滨</item>
        <item>大连</item>
        <item>海口</item>
        <item>沈阳</item>
        <item>厦门</item>
        <item>安庆</item>
        <item>鞍山</item>
        <item>阿克苏</item>
        <item>阿勒泰</item>
        <item>安康</item>
        <item>北京首都</item>
        <item>北京南苑</item>
        <item>保山</item>
        <item>包头</item>
        <item>北海</item>
        <item>蚌埠</item>
        <item>重庆</item>
        <item>成都</item>
        <item>长沙</item>
        <item>长春</item>
        <item>常德</item>
        <item>长治</item>
        <item>常州</item>
        <item>朝阳</item>
        <item>赤峰</item>
        <item>大连</item>
        <item>敦煌</item>
        <item>大理</item>
        <item>达县</item>
        <item>东营</item>
        <item>丹东</item>
        <item>大同</item>
        <item>恩施</item>
        <item>福州</item>
        <item>阜阳</item>
        <item>富蕴</item>
        <item>广州</item>
        <item>桂林</item>
        <item>贵阳</item>
        <item>格尔木</item>
        <item>广汉</item>
        <item>赣州</item>
        <item>海口</item>
        <item>哈尔滨</item>
        <item>杭州</item>
        <item>合肥</item>
        <item>黄山</item>
        <item>呼和浩特</item>
        <item>海拉尔</item>
        <item>哈密</item>
        <item>汉中</item>
        <item>黑河</item>
        <item>衡阳</item>
        <item>和田</item>
        <item>黄岩</item>
        <item>吉林</item>
        <item>济南</item>
        <item>九江</item>
        <item>九寨黄龙</item>
        <item>吉安</item>
        <item>佳木斯</item>
        <item>嘉峪关</item>
        <item>济宁</item>
        <item>景德镇</item>
        <item>景洪</item>
        <item>晋江</item>
        <item>锦州</item>
        <item>酒泉</item>
        <item>昆明</item>
        <item>克拉玛依</item>
        <item>喀什</item>
        <item>库尔勒</item>
        <item>库车</item>
        <item>洛阳</item>
        <item>兰州</item>
        <item>拉萨</item>
        <item>连云港</item>
        <item>丽江</item>
        <item>临沂</item>
        <item>柳州</item>
        <item>泸州</item>
        <item>芒市</item>
        <item>梅县</item>
        <item>绵阳</item>
        <item>牡丹江</item>
        <item>满洲里</item>
        <item>南京</item>
        <item>宁波</item>
        <item>南昌</item>
        <item>南宁</item>
        <item>南通</item>
        <item>南充</item>
        <item>南阳</item>
        <item>青岛</item>
        <item>秦皇岛</item>
        <item>齐齐哈尔</item>
        <item>泉州</item>
        <item>衢州</item>
        <item>且末</item>
        <item>庆阳</item>
        <item>沈阳</item>
        <item>深圳</item>
        <item>上海虹桥</item>
        <item>上海浦东</item>
        <item>汕头</item>
        <item>石家庄</item>
        <item>苏州</item>
        <item>三亚</item>
        <item>沙市</item>
        <item>思茅</item>
        <item>天津</item>
        <item>塔城</item>
        <item>太原</item>
        <item>通化</item>
        <item>通辽</item>
        <item>铜仁</item>
        <item>温州</item>
        <item>武汉</item>
        <item>武汉王家</item>
        <item>无锡</item>
        <item>乌鲁木齐</item>
        <item>威海</item>
        <item>梧州</item>
        <item>万县</item>
        <item>潍坊</item>
        <item>乌兰浩特</item>
        <item>武夷山</item>
        <item>厦门</item>
        <item>徐州</item>
        <item>西安</item>
        <item>西宁</item>
        <item>西昌</item>
        <item>襄樊</item>
        <item>锡林浩特</item>
        <item>银川</item>
        <item>延安</item>
        <item>延吉</item>
        <item>烟台</item>
        <item>盐城</item>
        <item>宜宾</item>
        <item>宜昌</item>
        <item>伊宁</item>
        <item>义乌</item>
        <item>永州</item>
        <item>榆林</item>
        <item>珠海</item>
        <item>昭通</item>
        <item>张家界</item>
        <item>湛江</item>
        <item>芷江</item>
        <item>中甸</item>
        <item>舟山</item>
        <item>遵义</item>
        <item>郑州</item>
    </string-array>

    <string name="title_activity_city_list">CityListActivity</string>

</resources>