<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_gray"
    android:orientation="vertical" >

    <include layout="@layout/layout_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="15dp" >

        <TextView
            android:id="@+id/tv_endorse_refund_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_endorse_refund"
            android:textColor="#000000"
            android:textSize="@dimen/layout_title" />

        <TextView
            android:id="@+id/tv_endorse_refund_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/endorse_refund_desc"
            android:textColor="#000000"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tv_endorse_change_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/title_endorse_change"
            android:textColor="#000000"
            android:textSize="@dimen/layout_title" />

        <TextView
            android:id="@+id/tv_endorse_change_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/endorse_change_desc"
            android:textColor="#000000"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tv_endorse_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/title_endorse"
            android:textColor="#000000"
            android:textSize="@dimen/layout_title" />

        <TextView
            android:id="@+id/tv_endorse_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/endorse_desc"
            android:textColor="#000000"
            android:textSize="15sp" />
    </LinearLayout>

</LinearLayout>