<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ticket_bg_gray"
    android:orientation="vertical"
    tools:context="com.daemon.airticket.MainActivity" >

    <include layout="@layout/layout_title" >
    </include>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:background="@color/ticket_title_color"
        android:padding="10dp"
        >

        <!-- 单程以及往返选择 -->
        <LinearLayout
            android:layout_width="136dp"
            android:layout_height="37dp"
            android:layout_centerInParent="true"
            android:orientation="horizontal" 
            >

            <Button
                android:id="@+id/btn_airticket_oneWay"
                android:layout_width="0dp"
                android:layout_height="match_parent" 
                android:layout_weight="1"
                android:text="@string/title_oneWay"
                android:background="@drawable/btn_oneway_selector"
                />

            <Button
                android:id="@+id/btn_airticket_goAndBack"
                android:layout_width="0dp"
                android:layout_height="match_parent" 
                android:layout_weight="1"
                android:text="@string/title_goAndBack"
                android:background="@drawable/btn_goandback_selector"
                />
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:divider="@drawable/line"
        android:orientation="vertical"
        android:padding="5dp"
        android:showDividers="middle" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="128dp"
                android:layout_weight="5"
                android:divider="@drawable/line"
                android:orientation="vertical"
                android:showDividers="middle" >

                <!-- 出发城市 -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="2"
                        android:gravity="center_vertical|right"
                        android:text="出发城市"
                        android:textColor="@color/ticket_font_gray"
                        android:textSize="@dimen/button_textSize" />

                    <Button
                        android:id="@+id/btn_airticket_leave"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="5"
                        android:background="@null"
                        android:drawableRight="@drawable/ic_xiangyou"
                        android:gravity="left|center_vertical"
                        android:paddingLeft="22dp"
                        android:text="宁波"
                        android:textColor="@color/ticket_black"
                        android:textSize="@dimen/layout_title" />
                </LinearLayout>

                <!-- 到达城市 -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="2"
                        android:gravity="center_vertical|right"
                        android:text="到达城市"
                        android:textColor="@color/ticket_font_gray"
                        android:textSize="@dimen/button_textSize" />

                    <Button
                        android:id="@+id/btn_airticket_arrive"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="5"
                        android:background="@null"
                        android:drawableRight="@drawable/ic_xiangyou"
                        android:gravity="left|center_vertical"
                        android:paddingLeft="22dp"
                        android:text="北京"
                        android:textColor="@color/ticket_black"
                        android:textSize="@dimen/layout_title" />
                </LinearLayout>
            </LinearLayout>
            
            <!-- 城市反向按钮 -->
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.5" >

                <ImageButton
                    android:id="@+id/imageBtn_airticket_fanxiang"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_centerInParent="true"
                    android:background="@null"
                    android:src="@drawable/ic_fanxiang" />
            </RelativeLayout>
        </LinearLayout>
        
        <!-- 出发日期 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="2"
                android:gravity="center_vertical|right"
                android:text="出发日期"
                android:textColor="@color/ticket_font_gray"
                android:textSize="@dimen/button_textSize" />

            <Button
                android:id="@+id/btn_airticket_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="7"
                android:background="@null"
                android:drawableRight="@drawable/ic_xiangyou"
                android:gravity="left|center_vertical"
                android:paddingLeft="22dp"
                android:paddingRight="15dp"
                android:text="3月2日"
                android:textColor="@color/ticket_black"
                android:textSize="@dimen/layout_title" />
        </LinearLayout>

        <!-- 返回日期 -->
        <LinearLayout
            android:id="@+id/linearLayout_airticket_backDate"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:orientation="horizontal" 
            android:visibility="gone"
            >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="2"
                android:gravity="center_vertical|right"
                android:text="返回日期"
                android:textColor="@color/ticket_font_gray"
                android:textSize="@dimen/button_textSize" />

            <Button
                android:id="@+id/btn_airticket_backDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="7"
                android:background="@null"
                android:drawableRight="@drawable/ic_xiangyou"
                android:gravity="left|center_vertical"
                android:paddingLeft="22dp"
                android:paddingRight="15dp"
                android:text="3月4日"
                android:textColor="@color/ticket_black"
                android:textSize="@dimen/layout_title" />
        </LinearLayout>
        
        <!-- 舱位选择 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="2"
                android:gravity="center_vertical|right"
                android:text="舱位"
                android:textColor="@color/ticket_font_gray"
                android:textSize="@dimen/button_textSize" />

            <Button
                android:id="@+id/btn_airticket_spaceType"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="7"
                android:background="@null"
                android:drawableRight="@drawable/ic_xiangyou"
                android:gravity="left|center_vertical"
                android:paddingLeft="22dp"
                android:paddingRight="15dp"
                android:text="经济舱"
                android:textColor="@color/ticket_black"
                android:textSize="@dimen/layout_title" />
        </LinearLayout>
    </LinearLayout>

    <!-- 搜索 -->
    <Button
        android:id="@+id/btn_airticket_search"
        android:layout_width="330dp"
        android:layout_height="45dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/ticket_btn_selector"
        android:text="@string/button_search"
        android:textColor="#ffffff"
        android:textSize="@dimen/button_textSize" />

</LinearLayout>